...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/browseEvents"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginBottom="200dp"
                android:background="@drawable/round_button_shape"
                android:fontFamily="@font/inter_medium"
                android:text="Browse Events"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/browseImages"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="200dp"
                android:layout_marginBottom="200dp"
                android:background="@drawable/round_button_shape"
                android:fontFamily="@font/inter_medium"
...
