...
                android:gravity="left|center"
                android:padding="16dp"
                android:text="Email:"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/event_poster_image"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_below="@id/email"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
...
