...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonOrganizer"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="135dp"
                android:background="@drawable/round_button_shape"
                android:fontFamily="@font/inter_medium"
                android:text="ORGANIZER"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAdmin"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/round_button_shape"
                android:fontFamily="@font/inter"
...
